<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Diabetes SLM</string>
    <string name="button_next">Next</string>
    <string name="button_previous">Previous</string>
    <string name="button_finish">Finish</string>

    <!-- Drawer menu -->
    <string-array name="nav_options">
        <item>Home</item>
        <item>Data</item>
        <item>Statistics</item>
        <item>Graphs</item>
        <item>Settings</item>
        <item>About</item>
    </string-array>

    <array name="nav_icons">
        <item>@android:drawable/ic_menu_add</item>
        <item>@android:drawable/ic_menu_my_calendar</item>
        <item>@android:drawable/ic_menu_report_image</item>
        <item>@drawable/ic_action_crop</item>
        <item>@drawable/ic_action_settings</item>
        <item>@drawable/ic_action_about</item>
    </array>

    <!-- Welcome Activity -->
    <string name="welcome_text_view_title">Welcome!</string>
    <string name="welcome_text_view_1">        This is Diabetes Self-Learning Manager, an app designed to help you improve your control over Type-1 Diabetes.</string>
    <string name="welcome_text_view_2">        It uses an algorythm that suggests changes on your dose. This might be dangerous
        if you don\'t know what you are doing, so check twice if the proposed change makes sense to you.</string>
    <string name="welcome_tos_title">Terms of service</string>
    <string name="welcome_tos_button_decline">Decline</string>
    <string name="welcome_tos_button_accept">Accept</string>
    <string name="welcome_tos_image_view_line_content">Underline</string>
    <string name="lore_ipsum">        Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.
    
    Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.
    
    Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.
    
    Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.
    
    Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.
    
    Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</string>

    <!-- Account Select Activity -->
    <string name="account_select_title">Account</string>
    <string name="account_select_text_1">We use Google Services to identify yourself and save your data so you can restore it in case you format your device or want to use this app on several devices. Please pick which account you want to use to identify yourself.</string>
    <string name="account_select_button_choose_account">Choose your account</string>
    <string name="account_select_progress_dialog_text_1">Connecting…</string>
    <!-- Setup Activity -->
    <string name="setup_text_view_title">Setup</string>
    <string name="setup_fragment_1_text_view_intro">First of all, we need to know how you measure things!</string>

    <!-- 2 -->
    <string name="setup_fragment_2_text_view_title">About you</string>
    <string name="setup_fragment_2_text_view_intro">So now we need you to fill some data about yourself in order to get the magic to work. Let\'s start by some basic info:</string>
    <string name="setup_fragment_2_text_view_injection">Injection system:</string>
    <string name="setup_fragment_2_radio_button_pump">Pump</string>
    <string name="setup_fragment_2_radio_button_pen">Pens</string>
    <string name="setup_fragment_2_text_view_age">Age:</string>
    <string name="setup_fragment_2_text_view_genre">Genre:</string>
    <string name="setup_fragment_2_radio_button_man">Man</string>
    <string name="setup_fragment_2_radio_button_woman">Woman</string>
    <string name="setup_fragment_2_text_view_weight">Weight (in kg)</string>

    <!-- 3 -->
    <string name="setup_fragment_3_text_view_title">Basal rate</string>
    <string name="setup_fragment_3_text_view_1">Please tell us how much basal insulin does your pump use each hour of the day.</string>

    <!-- 4 -->
    <string name="setup_fragment_4_text_view_1">Please tell us how much basal insulin (Lantus or similar do you use during a full day, each 24h).</string>
    <string name="setup_fragment_4_text_view_2">Basal dose in units:</string>

    <!-- 5 -->
    <string name="setup_fragment_5_text_view_title">Carb factor</string>
    <string name="setup_fragment_5_text_view_1">Please now tell us how much insuline do you need per each 10g of carbohydrate during the day.</string>
    <string name="setup_fragment_5_text_view_2">Breakfast</string>
    <string name="setup_fragment_5_text_view_3"> (units per 10g carbohydrates):</string>
    <string name="setup_fragment_5_text_view_4">Lunch</string>
    <string name="setup_fragment_5_text_view_6">Dinner</string>

    <!-- 6 -->
    <string name="setup_fragment_6_text_view_title">Correction factor</string>
    <string name="setup_fragment_6_text_view_1">Please tell us how much does your sugar blood level decrease per each unit of rapid insulin.</string>
    <string name="setup_fragment_6_text_view_2">Correction factor</string>
    <string name="setup_fragment_6_text_view_3"> (mg/dl decrease per unit):</string>

    <!-- 7 -->
    <string name="setup_fragment_7_text_view_title">Almost there</string>
    <string name="setup_fragment_7_text_view_1">Thank your for completing your data, this will help us provide you with more accurate suggestions.</string>
    <string name="title_activity_disease">DiseaseActivity</string>
    <string name="title_activity_glucose">GlucoseActivity</string>
    <string name="title_activity_food">FoodActivity</string>
    <string name="title_activity_bolus">BolusActivity</string>
    <string name="title_activity_exercise">ExerciseActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="title_activity_data">DataActivity</string>
    <string name="title_activity_graphs">GraphsActivity</string>
    <string name="title_activity_about">AboutActivity</string>

</resources>
