<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/welcome_tos_text_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/welcome_tos_title"
        android:textColor="@color/light_blue_text"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/welcome_tos_image_view_underline"
        android:layout_width="match_parent"
        android:layout_below="@id/welcome_tos_text_view_title"
        android:contentDescription="@string/welcome_tos_image_view_line_content"
        android:layout_height="2dp"
        android:background="@color/light_blue_text" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/welcome_tos_image_view_underline" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/welcome_tos_text_view_1"
                style="@style/content_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/lore_ipsum" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/welcome_tos_text_view_1"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/welcome_tos_button_decline"
                    style="@style/grey_bottom_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/welcome_tos_button_decline"/>

                <Button
                    android:id="@+id/welcome_tos_button_accept"
                    style="@style/grey_bottom_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/welcome_tos_button_accept" />
                
            </LinearLayout>
            
        </RelativeLayout>
        
    </ScrollView>

</RelativeLayout>