<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey_background"
    tools:context=".Selector">
    
    <ScrollView
	  android:layout_width="fill_parent"
	  android:layout_height="fill_parent"
	  android:layout_marginBottom="50dp">
	  
  		<RelativeLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:paddingBottom="@dimen/activity_vertical_margin"
		    android:paddingLeft="@dimen/activity_horizontal_margin"
		    android:paddingRight="@dimen/activity_horizontal_margin"
		    android:paddingTop="@dimen/activity_vertical_margin"
		    android:background="@color/light_grey_background"
		    tools:context=".Selector" >

  		       <TextView
                    android:id="@+id/welcome_text_view_title"
                    style="@style/tittle_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/welcome_text_view_title"/>
  		    
                <TextView
                    android:id="@+id/welcome_text_view_1"
                    style="@style/content_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/welcome_text_view_title"
                    android:layout_marginTop="24dp"
                    android:text="@string/welcome_text_view_1" />
                
                <TextView
                    android:id="@+id/welcome_text_view_2"
                    style="@style/content_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/welcome_text_view_1"
                    android:layout_marginTop="24dp" 
                    android:text="@string/welcome_text_view_2"/>
                                				
		</RelativeLayout>
		
	</ScrollView>
	
 	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal" >
  		
			<Button
                android:id="@+id/welcome_button_disabled"
                style="@style/grey_bottom_button"
                android:layout_weight="1" 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:enabled="false" />
			
            <Button
                android:id="@+id/welcome_button_next"
                style="@style/grey_bottom_button"
                android:layout_weight="1" 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/button_next" />
            
    </LinearLayout>
    
</RelativeLayout>
